Filtering works for restaurant names only

--- a/app/src/main/res/layout/activity_list_of_meals.xml
+++ b/app/src/main/res/layout/activity_list_of_meals.xml
@@ -5,11 +5,19 @@
     android:background="@color/main_background"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/editTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:maxLines="1" />
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/adView"
+        android:layout_below="@id/editTxt"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
