--- a/app/src/main/res/layout/activity_list_of_meals.xml
+++ b/app/src/main/res/layout/activity_list_of_meals.xml
@@ -6,18 +6,21 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/editTxt"
+        android:id="@+id/search_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:maxLines="1" />
+        android:layout_margin="5dp"
+        android:maxLines="1"
+        android:hint="@string/search_hint"
+        android:inputType="textCapCharacters"
+        android:visibility="gone"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/adView"
-        android:layout_below="@id/editTxt"
+        android:layout_below="@id/search_box"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
