Added search box to landscape layout

--- a/app/src/main/res/layout-land/activity_list_of_meals.xml
+++ b/app/src/main/res/layout-land/activity_list_of_meals.xml
@@ -10,6 +10,16 @@
     android:orientation="vertical"
     tools:context="aterbo.MemoryBite.ListOfMeals">
 
+    <EditText
+        android:id="@+id/search_box"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:maxLines="1"
+        android:hint="@string/search_hint"
+        android:inputType="textCapCharacters"
+        android:visibility="gone"/>
+
     <ImageView
         android:id="@+id/header_photo"
         android:layout_width="match_parent"
