--- a/app/src/main/res/layout-land/activity_list_of_meals.xml
+++ b/app/src/main/res/layout-land/activity_list_of_meals.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:maxLines="1"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
         android:hint="@string/search_hint"
         android:inputType="textCapWords"
         android:visibility="gone"/>
