--- a/app/src/main/res/layout/activity_list_of_meals.xml
+++ b/app/src/main/res/layout/activity_list_of_meals.xml
@@ -27,7 +27,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="aterbo.MemoryBite.ListOfMeals">
+        tools:context="aterbo.MemoryBite.activities.ListOfMealsActivity">
 
         <ImageView
             android:id="@+id/header_photo"
