--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -14,7 +14,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="aterbo.MemoryBite.MealDetails">
+        tools:context="aterbo.MemoryBite.activities.MealDetailsActivity">
 
         <LinearLayout
             android:layout_width="fill_parent"
