--- a/app/src/main/res/menu/menu_open_screen.xml
+++ b/app/src/main/res/menu/menu_open_screen.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="aterbo.MemoryBite.OpenScreen">
+    tools:context="aterbo.MemoryBite.activities.OpenScreenActivity">
     <item
         android:id="@+id/add_new_meal_menu"
         android:orderInCategory="60"
