Created compressed layout for list view and option to switch between two views via menu button. Default expanded view.

--- a/app/src/main/res/menu/menu_list_of_meals.xml
+++ b/app/src/main/res/menu/menu_list_of_meals.xml
@@ -15,6 +15,11 @@
         android:icon="@mipmap/ic_sort_white_24dp"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/toggle_list_size_menu"
+        android:orderInCategory="55"
+        android:title="@string/change_list_size"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/add_new_meal_menu"
         android:orderInCategory="60"
         android:title="@string/add_new_meal"
