--- a/app/src/main/res/layout/meal_list_item_layout_compressed.xml
+++ b/app/src/main/res/layout/meal_list_item_layout_compressed.xml
@@ -9,7 +9,8 @@
         android:id="@+id/meal_picture_list"
         android:layout_width="60dp"
         android:layout_height="2dp"
-        android:layout_margin="1dp"
+        android:layout_margin="4dp"
+        android:layout_gravity="center_vertical"
         android:scaleType="centerCrop" />
 
     <LinearLayout
