--- a/app/src/main/res/layout/meal_list_item_layout.xml
+++ b/app/src/main/res/layout/meal_list_item_layout.xml
@@ -28,16 +28,32 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/extra_medium_text" />
 
-        <TextView
-            android:id="@+id/location_list"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/medium_text" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/date_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
+                android:textSize="@dimen/medium_text" />
+
+            <TextView
+                android:id="@+id/location_list"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@color/secondary_text"
+                android:textSize="@dimen/medium_text" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/date_and_dined_with_list"
+            android:id="@+id/dined_with_list"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/secondary_text"
