--- a/app/src/main/res/layout/meal_list_item_layout.xml
+++ b/app/src/main/res/layout/meal_list_item_layout.xml
@@ -28,29 +28,22 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/extra_medium_text" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/location_list"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/medium_text" />
 
-            <TextView
-                android:id="@+id/date_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/secondary_text"
-                android:textSize="@dimen/medium_text" />
-
-            <TextView
-                android:id="@+id/location_list"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:textColor="@color/secondary_text"
-                android:textSize="@dimen/medium_text" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/date_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/secondary_text"
+            android:layout_gravity="top"
+            android:textSize="@dimen/small_text" />
 
         <TextView
             android:id="@+id/dined_with_list"
