--- a/app/src/main/res/layout/meal_list_item_layout.xml
+++ b/app/src/main/res/layout/meal_list_item_layout.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:orientation="vertical">
@@ -25,13 +25,16 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:textColor="@android:color/white"
             android:textSize="@dimen/extra_medium_text" />
 
         <TextView
             android:id="@+id/location_list"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="28dp"
+            android:gravity="center_vertical"
             android:maxLines="1"
             android:ellipsize="end"
             android:textColor="@color/secondary_text"
