Refactored all activities, objects, adaptors, and various other files into folders

--- a/app/src/main/res/layout/activity_input_meal.xml
+++ b/app/src/main/res/layout/activity_input_meal.xml
@@ -224,7 +224,7 @@
             style="@style/DetailsBlock"
             android:visibility="gone">
 
-            <aterbo.MemoryBite.FullHeightGridView
+            <aterbo.MemoryBite.customviews.FullHeightGridView
                 android:id="@+id/meal_input_photo_grid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
