--- a/app/src/main/res/layout/meal_list_item_layout.xml
+++ b/app/src/main/res/layout/meal_list_item_layout.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:background="@drawable/customborder">
 
-    <aterbo.MemoryBite.SquareImageView
+    <aterbo.MemoryBite.customviews.SquareImageView
         android:id="@+id/meal_picture_list"
         android:layout_width="120dp"
         android:layout_height="2dp"
