--- a/app/src/main/res/layout/activity_open_screen.xml
+++ b/app/src/main/res/layout/activity_open_screen.xml
@@ -47,7 +47,7 @@
             <Button
                 android:id="@+id/view_journal_button"
                 style="@style/MainMenuButton"
-                android:onClick="goToViewList"
+                android:onClick="viewMealJournal"
                 android:text="@string/view_journal" />
 
             <Button
